Minor layout changes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- HEADER -->
     <section role='website-header'>
-      <div class='jumbotron text-center'>
+      <div class='jumbotron text-center no-padding'>
         <div class='layer'></div>
         <div id='website-header'>
         <h3 id='website-header__subtitle'>At Heart I am a</h4>
@@ -34,83 +34,91 @@
 <!-- TODO: reduce the size of the images so they're not so damn big -->
 <!-- TODO: add alts to the images -->
 
-  <hr>
-  </br>
-
   <!-- PROJECTS -->
     <section role='projects'>
-      <div class='container fillwidth'>
-        <div class='row'>
-          <div class='projects_table'>
-            <div class='col-md-3 nopadding'>
-              <div class='project'>
-                <div class='project__info'>
-                  <span class="project__info__title">Mandelbrot</span>
-                  <hr>
-                  <span class="project__info__description">My favoutite fractal in the whole wide world!</span>
-                </div>
-                <img class='project__image' src="images/featured.png">
-              </div>
+      <div class='projects-table'>
+        <div class='projects-row'>
+          <div class='project'>
+            <div class='project__info'>
+              <span class="project__info__title">Recoloured Mandelbrot</span>
+              <hr>
+              <span class="project__info__description">Colour twist on a classic. Created with PyFractals.</span>
             </div>
-            <div class='col-md-3 nopadding'>
-              <div class='project'>
-                <img class='project__image' src="images/mandelbrot.png">
-              </div>
+            <img class='project__image' src="images/featured.png">
+          </div>
+          <div class='project'>
+            <div class='project__info'>
+              <span class="project__info__title">Studybot</span>
+              <hr>
+              <span class="project__info__description">Input your notes and get quizzed!</span>
             </div>
-            <div class='col-md-3 nopadding'>
-              <div class='project'>
-                <img class='project__image' src="images/julia.png">
-              </div>
+            <img class='project__image' src="images/studybot.png">
+          </div>
+          <div class='project'>
+            <div class='project__info'>
+              <span class="project__info__title">Mandelbrot</span>
+              <hr>
+              <span class="project__info__description">The true Mandelbrot set, with no fancy effects. Generated with Pyfractals</span>
             </div>
-            <div class='col-md-3 nopadding'>
-              <div class='project'>
-                <img class='project__image' src="images/newton.png">
-              </div>
+            <img class='project__image' src="images/mandelbrot.png">
+          </div>
+          <div class='project'>
+            <div class='project__info'>
+              <span class="project__info__title">Tic-Tac-Toe</span>
+              <hr>
+              <span class="project__info__description">Tic-Tac-Toe with an AI-automated opponent. Built in Python.</span>
             </div>
+            <img class='project__image' src="images/tictactoe.png">
           </div>
         </div>
-        <div class='row'>
-          <div class='projects_table'>
-            <div class='col-md-3 nopadding'>
-              <div class='project'>
-                <div class='project__info'>
-                  <span class="project__info__title">Mandelbrot</span>
-                  <hr>
-                  <span class="project__info__description">My favoutite fractal in the whole wide world!</span>
-                </div>
-                <img class='project__image' src="images/featured.png">
-              </div>
+        <div class='projects-row'>
+          <div class='project'>
+            <div class='project__info'>
+              <span class="project__info__title">Julia Set</span>
+              <hr>
+              <span class="project__info__description">Another great fractal, created with PyFractals.</span>
             </div>
-            <div class='col-md-3 nopadding'>
-              <div class='project'>
-                <img class='project__image' src="images/mandelbrot.png">
-              </div>
+            <img class='project__image' src="images/julia.png">
+          </div>
+          <div class='project'>
+            <div class='project__info'>
+              <span class="project__info__title">Zombie Fortress</span>
+              <hr>
+              <span class="project__info__description">Build your fortress and defend it! Made in Java.</span>
             </div>
-            <div class='col-md-3 nopadding'>
-              <div class='project'>
-                <img class='project__image' src="images/julia.png">
-              </div>
+            <img class='project__image' src="images/zombiefortress.png">
+          </div>
+          <div class='project'>
+            <div class='project__info'>
+              <span class="project__info__title">Pong</span>
+              <hr>
+              <span class="project__info__description">Pong made in Python, with an automated opponent and a few extra features.</span>
             </div>
-            <div class='col-md-3 nopadding'>
-              <div class='project'>
-                <img class='project__image' src="images/newton.png">
-              </div>
+            <img class='project__image' src="images/pong.png">
+          </div>
+          <div class='project'>
+            <div class='project__info'>
+              <span class="project__info__title">Newton</span>
+              <hr>
+              <span class="project__info__description">Created with trig functions.</span>
             </div>
+            <img class='project__image' src="images/newton.png">
           </div>
         </div>
       </div>
     </section>
 
   <!-- SKILLS -->
-    <section class='skills'>
+    <section role='skills'>
     </section>
 
   <!-- RESUME -->
-    <section class='resume'>
+    <section role='resume'>
     </section>
 
   <!-- CONTACT -->
-    <section class='contact'>
+    <section role='contact' class='contact'>
+      <h2 class="contact-header">Let's get in touch</h2>
     </section>
 
   <!-- SCRIPTS -->
