Added to Skills section

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
               <div class="item">
                 <div class="project col-xs-4">
                   <img class="project__image img-responsive" src="images/newton.png" alt="">
+                  <p class="project__description">The coolest fractal ever! Really a really cool fractal, wow.</p>
                 </div>          
               </div>
               <div class="item">
@@ -89,11 +90,62 @@
     <section role='skills' class='skills text-center'>
       <h1 class='section__title'>My Skills</h1>
       <p class='section__description'>These are my current skills up to date.</br>But I'm always learning new ones.</p>
+      <div class="row">
+        <div class="col-md-6">
+          <table class='skills__table' align="center">
+            <tr class='skill'>
+              <td class='skill__language'>Python</td>
+              <td class='skill__rating'><span>&#9733;&#9733;&#9733;&#9733;&#9734;</span></td>
+              <td class='skill__projects'><a href="https://github.com/MichaelAEden">PyFractals</a></td>
+            </tr>
+            <tr class='skill'>
+              <td class='skill__language'>Java</td>
+              <td class='skill__rating'><span>&#9733;&#9733;&#9733;&#9734;&#9734;</span></td>
+              <td class='skill__projects'><a href="https://github.com/MichaelAEden">Zombie Fortress</a></td>
+            </tr>
+            <tr class='skill'>
+              <td class='skill__language'>C++</td>
+              <td class='skill__rating'><span>&#9733;&#9733;&#9734;&#9734;&#9734;</span></td>
+              <td class='skill__projects'><a href="https://github.com/MichaelAEden">Zombie Fortress</a></td>
+            </tr>
+            <tr class='skill'>
+              <td class='skill__language'>Ruby</td>
+              <td class='skill__rating'><span>&#9733;&#9734;&#9734;&#9734;&#9734;</span></td>
+              <td class='skill__projects'>Iotum</td>
+            </tr>
+          </table>
+        </div>
+        <div class="col-md-6">
+          <table class='skills__table' align="center">
+            <tr class='skill'>
+              <td class='skill__language'>HTML</td>
+              <td class='skill__rating'><span>&#9733;&#9733;&#9734;&#9734;&#9734;</span></td>
+              <td class='skill__projects'><a href="https://github.com/MichaelAEden">StudyBot</a>, <a href="https://github.com/MichaelAEden">Personal Website</a></td>
+            </tr>
+            <tr class='skill'>
+              <td class='skill__language'>CSS</td>
+              <td class='skill__rating'><span>&#9733;&#9733;&#9734;&#9734;&#9734;</span></td>
+              <td class='skill__projects'><a href="https://github.com/MichaelAEden">StudyBot</a>, <a href="https://github.com/MichaelAEden">Personal Website</a></td>
+            </tr>
+            <tr class='skill'>
+              <td class='skill__language'>Javascript</td>
+              <td class='skill__rating'><span>&#9733;&#9733;&#9734;&#9734;&#9734;</span></td>
+              <td class='skill__projects'><a href="https://github.com/MichaelAEden">StudyBot</a>, <a href="https://github.com/MichaelAEden">Personal Website</a></td>
+            </tr>
+            <tr class='skill'>
+              <td class='skill__language'>Rails</td>
+              <td class='skill__rating'><span>&#9733;&#9734;&#9734;&#9734;&#9734;</span></td>
+              <td class='skill__projects'>Iotum</td>
+            </tr>
+          </table>
+        </div>
+      </div>
     </section>
 
   <!-- RESUME -->
     <section role='resume' class='resume text-center'>
       <h1 class='section__title'>Resume</h1>
+      <button class='btn--block'>Download</button>
     </section>
 
   <!-- CONTACT -->
@@ -104,11 +156,21 @@
         <table id="contact__table" align="center">
           <tbody>
             <tr>
-<td class="contact__icon"><a href="https://github.com/MichaelAEden" target="_newtab"><img src="images/icons/github.png" alt="Github"></a></td>
-<td class="contact__icon"><a href="https://www.facebook.com/michael.eden.589" target="_newtab"><img src="images/icons/facebook.png" alt="Facebook"></a></td>
-<td class="contact__icon"><a href="mailto:mikey.eden@gmail.com" target="_newtab"><img src="images/icons/email.png" alt="Email"></a></td>
-<td class="contact__icon"><a href="https://www.instagram.com/mike_eden/" target="_newtab"><img src="images/icons/instagram.png" alt="Instagram"></a></td>
-<td class="contact__icon"><a href="https://www.linkedin.com/in/michaelaeden/" target="_newtab"><img src="images/icons/linkedin.png" alt="LinkedIn"></a></td>
+              <td class="contact__icon">
+                <a href="https://github.com/MichaelAEden" target="_newtab"><img src="images/icons/github.png" alt="Github"></a>
+              </td>
+              <td class="contact__icon">
+                <a href="https://www.facebook.com/michael.eden.589" target="_newtab"><img src="images/icons/facebook.png" alt="Facebook"></a>
+              </td>
+              <td class="contact__icon">
+                <a href="mailto:mikey.eden@gmail.com" target="_newtab"><img src="images/icons/email.png" alt="Email"></a>
+              </td>
+              <td class="contact__icon">
+                <a href="https://www.instagram.com/mike_eden/" target="_newtab"><img src="images/icons/instagram.png" alt="Instagram"></a>
+              </td>
+              <td class="contact__icon">
+                <a href="https://www.linkedin.com/in/michaelaeden/" target="_newtab"><img src="images/icons/linkedin.png" alt="LinkedIn"></a>
+              </td>
             </tr>
           </tbody>
         </table>
