Added resume downloading, changed jumbotron background image

--- a/index.html
+++ b/index.html
@@ -53,23 +53,22 @@
             <div class="carousel-inner">
               <div class="item active">
                 <div class="project col-xs-4">
-                  <img class="project__image" src="images/albion.png" alt="">
+                  <img class="project__image" src="images/projects/albion.png" alt="">
                 </div>          
               </div>
               <div class="item">
                 <div class="project col-xs-4">
-                  <img class="project__image img-responsive" src="images/newton.png" alt="">
-                  <p class="project__description">The coolest fractal ever! Really a really cool fractal, wow.</p>
+                  <img class="project__image img-responsive" src="images/projects/newton.png" alt="">
                 </div>          
               </div>
               <div class="item">
                 <div class="project col-xs-4">
-                  <img class="project__image img-responsive" src="images/mandelbrot.png" alt="">
+                  <img class="project__image img-responsive" src="images/projects/mandelbrot.png" alt="">
                 </div>
               </div>
               <div class="item">
                 <div class="project col-xs-4">
-                  <img class="project__image img-responsive" src="images/featured.png" alt="">
+                  <img class="project__image img-responsive" src="images/projects/featured.png" alt="">
                 </div>
               </div>
             </div>
@@ -145,7 +144,9 @@
   <!-- RESUME -->
     <section role='resume' class='resume text-center'>
       <h1 class='section__title'>Resume</h1>
-      <button class='btn--block'>Download</button>
+      <form method='get' action='downloads/Resume.pages'>
+        <button type='submit' class='btn--block'>Download</button>
+      </form>
     </section>
 
   <!-- CONTACT -->
