Added new projects, image re

--- a/index.html
+++ b/index.html
@@ -57,17 +57,27 @@
         <div class="col-md-12">
           <ul id="projects__slider">
             <li class="project col-xs-4">
-              <img class="project__image" src="images/projects/albion.png" alt="">
+              <img class="project__image" src="images/projects/pyfractals.png" alt="">
+              <div class='project__info'>
+                <span class='project__info__title'>Photography</p>
+                <span class='project__info__description'>This shit's cool</p>
+              </div>
             </l1>
             <li class="project col-xs-4">
-              <img class="project__image img-responsive" src="images/projects/newton.png" alt="">
+              <img class="project__image img-responsive" src="images/projects/game_of_life.png" alt="">
             </l1>
             <li class="project col-xs-4">
-              <img class="project__image img-responsive" src="images/projects/mandelbrot.png" alt="">
+              <img class="project__image img-responsive" src="images/projects/game_of_life_3d.png" alt="">
             </l1>
             <li class="project col-xs-4">
-              <img class="project__image img-responsive" src="images/projects/featured.png" alt="">
-            </l1>           
+              <img class="project__image img-responsive" src="images/projects/studybot.png" alt="">
+            </l1>
+            <li class="project col-xs-4">
+              <img class="project__image img-responsive" src="images/projects/pong.png" alt="">
+            </l1>  
+            <li class="project col-xs-4">
+              <img class="project__image img-responsive" src="images/projects/tictactoe.png" alt="">
+            </l1>             
           </ul>
         </div>
       </div>
