Small wording change

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <img class="project__image" src="images/projects/pyfractals.png" alt="">
               <div class='project__info'>
                 <span class='project__info__title'>Photography</p>
-                <span class='project__info__description'>This shit's cool</p>
+                <span class='project__info__description'>This stuff's cool</p>
               </div>
             </l1>
             <li class="project col-xs-4">
