--- a/index.html
+++ b/index.html
@@ -57,26 +57,38 @@
         <div class="col-md-12">
           <ul id="projects__slider">
             <li class="project col-xs-4">
-              <img class="project__image" src="images/projects/pyfractals.png" alt="">
-              <div class='project__info'>
+              <a href="https://github.com/MichaelAEden/PyFractals" target="_blank">
+                <img class="project__image img-responsive" src="images/projects/pyfractals.png" alt="PyFractals">
+              </a>
+              <!-- <div class='project__info'>
                 <span class='project__info__title'>Photography</p>
                 <span class='project__info__description'>This stuff's cool</p>
-              </div>
+              </div> -->
             </l1>
             <li class="project col-xs-4">
-              <img class="project__image img-responsive" src="images/projects/game_of_life.png" alt="">
+              <a href="https://github.com/MichaelAEden/GameOfLife" target="_blank">
+                <img class="project__image img-responsive" src="images/projects/game_of_life.png" alt="The Game of Life">
+              </a>
             </l1>
             <li class="project col-xs-4">
-              <img class="project__image img-responsive" src="images/projects/game_of_life_3d.png" alt="">
+              <a href="https://github.com/MichaelAEden/GameOfLife3D" target="_blank">
+                <img class="project__image img-responsive" src="images/projects/game_of_life_3d.png" alt="Game of Life 3D">
+              </a>
             </l1>
             <li class="project col-xs-4">
-              <img class="project__image img-responsive" src="images/projects/studybot.png" alt="">
+              <a href="https://github.com/MichaelAEden/The-StudyBot" target="_blank">
+                <img class="project__image img-responsive" src="images/projects/studybot.png" alt="StudyBot">
+              </a>
             </l1>
             <li class="project col-xs-4">
-              <img class="project__image img-responsive" src="images/projects/pong.png" alt="">
+              <a href="https://github.com/MichaelAEden/Pong" target="_blank">
+                <img class="project__image img-responsive" src="images/projects/pong.png" alt="Pong">
+              </a>
             </l1>  
             <li class="project col-xs-4">
-              <img class="project__image img-responsive" src="images/projects/tictactoe.png" alt="">
+              <a href="https://github.com/MichaelAEden/Tic-Tac-Toe" target="_blank">
+                <img class="project__image img-responsive" src="images/projects/tictactoe.png" alt="">
+              </a>
             </l1>             
           </ul>
         </div>
@@ -92,22 +104,22 @@
           <table class='skills__table' align="center">
             <tr class='skill'>
               <td class='skill__language'>Python</td>
-              <td class='skill__rating'><span>&#9733;&#9733;&#9733;&#9733;&#9734;</span></td>
+              <td class='skill__rating'><span>&#9733;&#9733;&#9733;&#9733;&#9733;</span></td>
               <td class='skill__projects'><a href="https://github.com/MichaelAEden">PyFractals</a></td>
             </tr>
             <tr class='skill'>
               <td class='skill__language'>Java</td>
-              <td class='skill__rating'><span>&#9733;&#9733;&#9733;&#9734;&#9734;</span></td>
+              <td class='skill__rating'><span>&#9733;&#9733;&#9733;&#9733;&#9733;</span></td>
               <td class='skill__projects'><a href="https://github.com/MichaelAEden">Zombie Fortress</a></td>
             </tr>
             <tr class='skill'>
               <td class='skill__language'>C++</td>
-              <td class='skill__rating'><span>&#9733;&#9733;&#9734;&#9734;&#9734;</span></td>
+              <td class='skill__rating'><span>&#9733;&#9733;&#9733;&#9733;&#9734;</span></td>
               <td class='skill__projects'><a href="https://github.com/MichaelAEden">Zombie Fortress</a></td>
             </tr>
             <tr class='skill'>
               <td class='skill__language'>Ruby</td>
-              <td class='skill__rating'><span>&#9733;&#9734;&#9734;&#9734;&#9734;</span></td>
+              <td class='skill__rating'><span>&#9733;&#9733;&#9733;&#9734;&#9734;</span></td>
               <td class='skill__projects'>Iotum</td>
             </tr>
           </table>
@@ -116,24 +128,24 @@
           <table class='skills__table' align="center">
             <tr class='skill'>
               <td class='skill__language'>HTML</td>
-              <td class='skill__rating'><span>&#9733;&#9733;&#9734;&#9734;&#9734;</span></td>
+              <td class='skill__rating'><span>&#9733;&#9733;&#9733;&#9733;&#9734;</span></td>
               <td class='skill__projects'><a href="https://github.com/MichaelAEden">StudyBot</a>, <a href="https://github.com/MichaelAEden">Personal Website</a></td>
             </tr>
             <tr class='skill'>
               <td class='skill__language'>CSS</td>
-              <td class='skill__rating'><span>&#9733;&#9733;&#9734;&#9734;&#9734;</span></td>
+              <td class='skill__rating'><span>&#9733;&#9733;&#9733;&#9734;&#9734;</span></td>
               <td class='skill__projects'><a href="https://github.com/MichaelAEden">StudyBot</a>, <a href="https://github.com/MichaelAEden">Personal Website</a></td>
             </tr>
             <tr class='skill'>
               <td class='skill__language'>Javascript</td>
-              <td class='skill__rating'><span>&#9733;&#9733;&#9734;&#9734;&#9734;</span></td>
+              <td class='skill__rating'><span>&#9733;&#9733;&#9733;&#9734;&#9734;</span></td>
               <td class='skill__projects'><a href="https://github.com/MichaelAEden">StudyBot</a>, <a href="https://github.com/MichaelAEden">Personal Website</a></td>
             </tr>
-            <tr class='skill'>
+<!--             <tr class='skill'>
               <td class='skill__language'>Rails</td>
               <td class='skill__rating'><span>&#9733;&#9734;&#9734;&#9734;&#9734;</span></td>
               <td class='skill__projects'>Iotum</td>
-            </tr>
+            </tr> -->
           </table>
         </div>
       </div>
