Removed bug causing margin to appear

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <!-- PROJECTS -->
     <section id='projects' class='projects text-center'>
       <h1 class='section__title'>My Best Projects</h1>
-      <div class="row">
+      <div class="container row">
         <div class="col-md-12">
           <ul id="projects__slider">
             <li class="project col-xs-4">
@@ -99,7 +99,7 @@
     <section id='skills' class='skills text-center'>
       <h1 class='section__title'>My Skills</h1>
       <p class='section__description'>These are my current skills up to date.</br>But I'm always learning new ones.</p>
-      <div class="row">
+      <div class="container row">
         <div class="col-md-6">
           <table class='skills__table' align="center">
             <tr class='skill'>
