Fixed horizontal scrollbar bug

--- a/index.html
+++ b/index.html
@@ -53,53 +53,49 @@
   <!-- PROJECTS -->
     <section id='projects' class='projects text-center'>
       <h1 class='section__title'>My Best Projects</h1>
-      <div class="container row">
-        <div class="col-md-12">
-          <ul id="projects__slider">
-            <li class="project col-xs-4">
-              <a href="https://github.com/MichaelAEden/PyFractals" target="_blank">
-                <img class="project__image img-responsive" src="images/projects/pyfractals.png" alt="PyFractals">
-              </a>
-              <!-- <div class='project__info'>
-                <span class='project__info__title'>Photography</p>
-                <span class='project__info__description'>This stuff's cool</p>
-              </div> -->
-            </l1>
-            <li class="project col-xs-4">
-              <a href="https://github.com/MichaelAEden/GameOfLife" target="_blank">
-                <img class="project__image img-responsive" src="images/projects/game_of_life.png" alt="The Game of Life">
-              </a>
-            </l1>
-            <li class="project col-xs-4">
-              <a href="https://github.com/MichaelAEden/GameOfLife3D" target="_blank">
-                <img class="project__image img-responsive" src="images/projects/game_of_life_3d.png" alt="Game of Life 3D">
-              </a>
-            </l1>
-            <li class="project col-xs-4">
-              <a href="https://github.com/MichaelAEden/The-StudyBot" target="_blank">
-                <img class="project__image img-responsive" src="images/projects/studybot.png" alt="StudyBot">
-              </a>
-            </l1>
-            <li class="project col-xs-4">
-              <a href="https://github.com/MichaelAEden/Pong" target="_blank">
-                <img class="project__image img-responsive" src="images/projects/pong.png" alt="Pong">
-              </a>
-            </l1>  
-            <li class="project col-xs-4">
-              <a href="https://github.com/MichaelAEden/Tic-Tac-Toe" target="_blank">
-                <img class="project__image img-responsive" src="images/projects/tictactoe.png" alt="">
-              </a>
-            </l1>             
-          </ul>
-        </div>
-      </div>
+      <ul id="projects__slider">
+        <li class="project col-xs-4">
+          <a href="https://github.com/MichaelAEden/PyFractals" target="_blank">
+            <img class="project__image img-responsive" src="images/projects/pyfractals.png" alt="PyFractals">
+          </a>
+          <!-- <div class='project__info'>
+            <span class='project__info__title'>Photography</p>
+            <span class='project__info__description'>This stuff's cool</p>
+          </div> -->
+        </l1>
+        <li class="project col-xs-4">
+          <a href="https://github.com/MichaelAEden/GameOfLife" target="_blank">
+            <img class="project__image img-responsive" src="images/projects/game_of_life.png" alt="The Game of Life">
+          </a>
+        </l1>
+        <li class="project col-xs-4">
+          <a href="https://github.com/MichaelAEden/GameOfLife3D" target="_blank">
+            <img class="project__image img-responsive" src="images/projects/game_of_life_3d.png" alt="Game of Life 3D">
+          </a>
+        </l1>
+        <li class="project col-xs-4">
+          <a href="https://github.com/MichaelAEden/The-StudyBot" target="_blank">
+            <img class="project__image img-responsive" src="images/projects/studybot.png" alt="StudyBot">
+          </a>
+        </l1>
+        <li class="project col-xs-4">
+          <a href="https://github.com/MichaelAEden/Pong" target="_blank">
+            <img class="project__image img-responsive" src="images/projects/pong.png" alt="Pong">
+          </a>
+        </l1>  
+        <li class="project col-xs-4">
+          <a href="https://github.com/MichaelAEden/Tic-Tac-Toe" target="_blank">
+            <img class="project__image img-responsive" src="images/projects/tictactoe.png" alt="">
+          </a>
+        </l1>             
+      </ul>
     </section>
 
   <!-- SKILLS -->
     <section id='skills' class='skills text-center'>
       <h1 class='section__title'>My Skills</h1>
       <p class='section__description'>These are my current skills up to date.</br>But I'm always learning new ones.</p>
-      <div class="container row">
+      <div class="row">
         <div class="col-md-6">
           <table class='skills__table' align="center">
             <tr class='skill'>
