--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
   <!-- RESUME -->
     <section id='resume' class='resume text-center'>
       <h1 class='section__title'>Resume</h1>
-      <form method='get' action='downloads/Resume.pages'>
+      <form method='get' action='downloads/Resume.pdf'>
         <button type='submit' class='btn--block'>Download</button>
       </form>
     </section>
